crates/rsciter_macro/tests/compile_fail/pattern_test.rs
#[rsciter_macro::xmod]
mod with_pattern {
    pub fn test( &(x, y): &(i32, i32)) {
    }
}

fn main() {}